Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

INSTALLER
	Fixed: sysctl: permission denied on key 'net.ipv4.conf.all.promote_secondaries' ( vps )
	Fixed: /bin/cp: cannot overwrite non-directory when using symlinks ( replaced by rsync command )

------------------------------------------------------------------------------------------------------------------------
1.1.20
------------------------------------------------------------------------------------------------------------------------

2014-12-11: Laurent Declercq
	RELEASE i-MSCP 1.1.20

CONFIGS
	Fixed: Unable to start the Ftp server - unknown protocol: 'TLSv1.1' ( ProFTPD )

ENGINE
	Fixed: Unable to do any operation on the user web directory - ( immutable bit )

------------------------------------------------------------------------------------------------------------------------
1.1.19
------------------------------------------------------------------------------------------------------------------------

2014-12-11: Laurent Declercq
	RELEASE i-MSCP 1.1.19

CONFIGS
	Added: Sysctl configuration file for secondary IP promoting ( /etc/sysctl.d/imscp.conf file )
	Changed: SPF - Email treating level is now set to softfail instead of fail ( bind9 )
	Fixed: Access to error documents is forbiden in some contexts ( Apache )
	Fixed: A TLS fatal alert has been received - Wrong cipher suite ( ProFTPD )
	Fixed: Domain aliases and subdomains can't follow symlinks from customer homedir
	Fixed: Missing NoSessionReuseRequired parameter ( ProFTPD )

DAEMON
	Fixed: Network manager must not remove SSH connection IP

ENGINE
	Fixed: Fcgi wrapper is not created in some contexts ( apache_fcgid )
	Fixed: Pool configuration file is not created in some contexts ( apache_php_fpm )

GUI
	Added: Events for mail catch-all
	Changed: All network interfaces are now selectable, even if they are not up