@@ -84,7 +84,7 @@ INSERT IGNORE INTO `config` (`name`, `value`) VALUES
 ('PREVENT_EXTERNAL_LOGIN_ADMIN', '1'),
 ('PREVENT_EXTERNAL_LOGIN_RESELLER', '1'),
 ('PREVENT_EXTERNAL_LOGIN_CLIENT', '1'),
-('DATABASE_REVISION', '196'),
+('DATABASE_REVISION', '197'),
 ('PHPINI_ALLOW_URL_FOPEN', 'off'),
 ('PHPINI_DISPLAY_ERRORS', 'off'),
 ('PHPINI_UPLOAD_MAX_FILESIZE', '10'),
@@ -436,6 +436,7 @@ CREATE TABLE IF NOT EXISTS `plugin` (
   `plugin_status` varchar(255) COLLATE utf8_unicode_ci DEFAULT NULL,
   `plugin_error` text COLLATE utf8_unicode_ci NULL DEFAULT NULL,
   `plugin_backend` varchar(3) COLLATE utf8_unicode_ci NOT NULL DEFAULT 'no',
+  `plugin_locked` tinyint UNSIGNED NOT NULL DEFAULT '0',
   PRIMARY KEY (`plugin_id`),
   UNIQUE KEY `name` (`plugin_name`),
   INDEX `plugin_priority` (`plugin_priority`)
